--- a/assignment1/a1841612_yuqingchen_assign1a.ipynb
+++ b/assignment1/a1841612_yuqingchen_assign1a.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "source": [
     "We can see the type of the date is an object which is different from others, so we need to do convert.\n",
-    "According to research, dataset's date/time variables can generate additional functions: the number of seconds from midnight for each day (NSM), the week status (weekend or workday) and the day of the week (Candanedo et al. 2017, P.85). So I will convert the 'date' time variable to NSM and week status"
+    "According to research, dataset's date/time variables can generate additional functions: the number of seconds from midnight for each day (NSM), the week status (weekend or workday) and the day of the week (Candanedo et al. 2017, P. 85). So I will convert the 'date' time variable to NSM and week status"
    ]
   },
   {
@@ -1527,20 +1527,16 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
-    "# 创建并训练KNN模型\n",
     "knn_reg = KNeighborsRegressor(n_neighbors=5)\n",
     "knn_reg.fit(X_train, y_train)\n",
     "\n",
-    "# 使用模型对测试集进行预测\n",
     "y_pred_knn = knn_reg.predict(X_test)\n",
     "\n",
-    "# 计算评估指标\n",
     "mse_knn = mean_squared_error(y_test, y_pred_knn)\n",
     "rmse_knn = np.sqrt(mse_knn)\n",
     "mae_knn = mean_absolute_error(y_test, y_pred_knn)\n",
     "knn_train_score = knn_reg.score(X_train, y_train)\n",
     "\n",
-    "# 打印KNN模型的性能指标\n",
     "print(\"KNN Regression Model:\")\n",
     "print(\"Mean Squared Error (MSE):\", mse_knn)\n",
     "print(\"Root Mean Squared Error (RMSE):\", rmse_knn)\n",
@@ -1561,7 +1557,7 @@
    "id": "bbbdaee3",
    "metadata": {},
    "source": [
-    "MSE, MAE and RMSE are convenient measures of \"mean error\" used to assess the degree of variability in the data (Lyu et al. 2022, p.). So we visualise the data based on the above results for comparison"
+    "MSE, MAE and RMSE are convenient measures of \"mean error\" used to assess the degree of variability in the data (Lyu et al. 2022, p.1488). So we visualise the data based on the above results for comparison"
    ]
   },
   {
@@ -1667,12 +1663,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99cf2087",
+   "cell_type": "markdown",
+   "id": "7a850c67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "By completing this assignment I have learnt how to visualise data, pre-process data and use implement machine learning models such as linear regression, random forests and k-nearest neighbours. In fact, I took a similar class last year called Computer Vision, which had roughly the same steps except for the data visualisation. In terms of model improvement and optimisation, I think I have room for improvement. For example, I can  normalise the data. For model selection, I can also try more models to get the best model. In terms of dataset, I can try to add new attributes that will help the models to capture patterns and trends in the data more accurately."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1689,13 +1685,13 @@
    "source": [
     "[1] Candanedo, LM, Feldheim, V & Deramaix, D 2017, ‘Data driven prediction models of energy use of appliances in a low-energy house’, Energy and Buildings, vol. 140, pp. 81–97.\n",
     "\n",
-    "[2] Chen, YT, Piedad, E & Kuo, CC 2019, ‘Energy consumption load forecasting using a level-based random forest classifier’, Symmetry (Basel), vol. 11, no. 8, pp. 956-\n",
+    "[2] Chen, YT, Piedad, E & Kuo, CC 2019, ‘Energy consumption load forecasting using a level-based random forest classifier’, Symmetry (Basel), vol. 11, no. 8, pp. 956-965.\n",
     "\n",
     "[3] Fumo, N & Rafe Biswas, MA 2015, ‘Regression analysis for prediction of residential energy consumption’, Renewable & Sustainable Energy Reviews, vol. 47, pp. 332–343.\n",
     "\n",
-    "[4] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, Materials, vol. 15, no. 4, pp. 1477-.\n",
+    "[4] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, Materials, vol. 15, no. 4, pp. 1477-1498.\n",
     "\n",
-    "[5] Tukey, JW, John W 1977, Exploratory data analysis, Addison-Wesley Pub. Co., Reading, Mass.\n",
+    "[5] Tukey, JW & John W, 1977, Exploratory data analysis, Addison-Wesley Pub. Co., U.S.A.\n",
     "\n",
     "[6] V E, S, Shin, C & Cho, Y 2021, ‘Efficient energy consumption prediction model for a data analytic-enabled industry building in a smart city’, Building Research and Information : The International Journal of Research, Development and Demonstration, vol. 49, no. 1, pp. 127–143."
    ]
