--- a/assignment1/a1841612_yuqingchen_assign1a.ipynb
+++ b/assignment1/a1841612_yuqingchen_assign1a.ipynb
@@ -1667,7 +1667,15 @@
    "id": "7a850c67",
    "metadata": {},
    "source": [
-    "By completing this assignment I have learnt how to visualise data, pre-process data and use implement machine learning models such as linear regression, random forests and k-nearest neighbours. In fact, I took a similar class last year called Computer Vision, which had roughly the same steps except for the data visualisation. In terms of model improvement and optimisation, I think I have room for improvement. For example, I can  normalise the data. For model selection, I can also try more models to get the best model. In terms of dataset, I can try to add new attributes that will help the models to capture patterns and trends in the data more accurately."
+    "By completing this assignment I have learnt how to visualise data, pre-process data and use implement machine learning models such as linear regression, random forests and k-nearest neighbours. \n",
+    "\n",
+    "In fact, I took a similar class last year called Computer Vision, which had roughly the same steps except for the data visualisation. \n",
+    "\n",
+    "In terms of model improvement and optimisation, I think I have room for improvement. For example, I can  normalise the data. \n",
+    "\n",
+    "For model selection, I can also try more models to get the best model. \n",
+    "\n",
+    "In terms of dataset, I can try to add new attributes that will help the models to capture patterns and trends in the data more accurately."
    ]
   },
   {
@@ -1683,17 +1691,17 @@
    "id": "806dfc7f",
    "metadata": {},
    "source": [
-    "[1] Candanedo, LM, Feldheim, V & Deramaix, D 2017, ‘Data driven prediction models of energy use of appliances in a low-energy house’, Energy and Buildings, vol. 140, pp. 81–97.\n",
+    "[1] Candanedo, LM, Feldheim, V & Deramaix, D 2017, ‘Data driven prediction models of energy use of appliances in a low-energy house’, *Energy and Buildings*, vol. 140, pp. 81–97.\n",
     "\n",
-    "[2] Chen, YT, Piedad, E & Kuo, CC 2019, ‘Energy consumption load forecasting using a level-based random forest classifier’, Symmetry (Basel), vol. 11, no. 8, pp. 956-965.\n",
+    "[2] Chen, YT, Piedad, E & Kuo, CC 2019, ‘Energy consumption load forecasting using a level-based random forest classifier’, *Symmetry (Basel)*, vol. 11, no. 8, pp. 956-965.\n",
     "\n",
-    "[3] Fumo, N & Rafe Biswas, MA 2015, ‘Regression analysis for prediction of residential energy consumption’, Renewable & Sustainable Energy Reviews, vol. 47, pp. 332–343.\n",
+    "[3] Fumo, N & Rafe Biswas, MA 2015, ‘Regression analysis for prediction of residential energy consumption’, *Renewable & Sustainable Energy Reviews*, vol. 47, pp. 332–343.\n",
     "\n",
-    "[4] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, Materials, vol. 15, no. 4, pp. 1477-1498.\n",
+    "[4] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, *Materials*, vol. 15, no. 4, pp. 1477-1498.\n",
     "\n",
-    "[5] Tukey, JW & John W, 1977, Exploratory data analysis, Addison-Wesley Pub. Co., U.S.A.\n",
+    "[5] Tukey, JW & John W, 1977, Exploratory data analysis, *Addison-Wesley Pub. Co.*, U.S.A.\n",
     "\n",
-    "[6] V E, S, Shin, C & Cho, Y 2021, ‘Efficient energy consumption prediction model for a data analytic-enabled industry building in a smart city’, Building Research and Information : The International Journal of Research, Development and Demonstration, vol. 49, no. 1, pp. 127–143."
+    "[6] V E, S, Shin, C & Cho, Y 2021, ‘Efficient energy consumption prediction model for a data analytic-enabled industry building in a smart city’, *Building Research and Information : The International Journal of Research*, Development and Demonstration, vol. 49, no. 1, pp. 127–143."
    ]
   }
  ],
