add assignment3 scenario

--- a/assignment2/a1841612_yuqingchen_assign1b.ipynb
+++ b/assignment2/a1841612_yuqingchen_assign1b.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Assignment 1b: Time Series Forecasting\n",
     "\n",
-    "### \\<your name> \\<your id>\n",
+    "### \\yuqing chen \\a1841612\n",
     "\n",
     "#### Follow detail instructions in the assignment specification and use these heading for implementation and discussion"
    ]
