--- a/assignment2/a1841612_yuqingchen_assign1b.ipynb
+++ b/assignment2/a1841612_yuqingchen_assign1b.ipynb
@@ -22,11 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e967e07b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# load the data from the dataset\n",
+    "file_path = 'energydata_complete.csv'\n",
+    "df = pd.read_csv(file_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
