--- a/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
+++ b/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
@@ -55,15 +55,31 @@
     "\n",
     "1) What was the ultimate goal of the researcher in the described scenario?\n",
     "\n",
+    "Answer: The ultimate goal was to attempt to identify a subset of predictors that had the ability to classify samples into the correct response with an accuracy of at least 80%.\n",
+    "\n",
     "2) What approach did the researcher take to provide evidence that the selected predictors could classify the samples?\n",
+    "\n",
+    "Answer: The researcher chose to use 70% of the data for a training set, 10-fold cross-validation for model training, and the implicit feature selection methods of the glmnet and random forest.\n",
     "\n",
     "3) How did the researchers illustrate that feature selection outside of resampling could lead to spurious results?\n",
     "\n",
+    "The researchers performed principal component analysis on 300 predictor variables and plotted samples projected onto the first two components coloured by response category.\n",
+    "\n",
     "4) If the researcher wanted to improve the model's performance, what steps should they take next, considering the issues mentioned?\n",
+    "\n",
+    "1. Consider trying other feature selection methods, such as embedded methods or packaging methods\n",
+    "2. Use other models\n",
     "\n",
     "5) How would you design a proper experiment to validate the significance of selected predictors for classifying the response correctly?\n",
     "\n",
+    "Split the dataset into a training set and a test set.\n",
+    "Perform feature selection on the training set using resampling techniques (e.g., cross-validation) and train the model.\n",
+    "Evaluate the performance of the model on an independent test set to assess its generalisation ability.\n",
+    "Use statistical tests to determine whether the selected predictors are significant for correctly classifying responses.\n",
+    "\n",
     "6) Can you provide real-world examples where feature selection outside of resampling could lead to misleading results, and how could such issues be addressed?\n",
+    "\n",
+    "Analysis of gene expression data in medical research. If feature selection is performed without cross validation or other resampling techniques, features that are not relevant to the response may be selected, producing misleading results.\n",
     "\n",
     "7) What was the initial cross-validation accuracy achieved using the selected models?"
    ]
@@ -141,11 +157,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n3/ddr1nygd4b11p0zv8kwtqx3w0000gn/T/ipykernel_1015/2034491470.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fancyimpute'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb Cell 8\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfancyimpute\u001b[39;00m \u001b[39mimport\u001b[39;00m IterativeImputer\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Create a sample dataset with missing values\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m data \u001b[39m=\u001b[39m {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m: [\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, np\u001b[39m.\u001b[39mnan, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mB\u001b[39m\u001b[39m'\u001b[39m: [np\u001b[39m.\u001b[39mnan, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, np\u001b[39m.\u001b[39mnan, \u001b[39m5\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m: [\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m }\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fancyimpute'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -520,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
