--- a/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
+++ b/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
@@ -157,34 +157,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/n3/ddr1nygd4b11p0zv8kwtqx3w0000gn/T/ipykernel_1015/2034491470.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fancyimpute'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/yuqing/Desktop/MiningBigData/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb Cell 8\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfancyimpute\u001b[39;00m \u001b[39mimport\u001b[39;00m IterativeImputer\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Create a sample dataset with missing values\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m data \u001b[39m=\u001b[39m {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m: [\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, np\u001b[39m.\u001b[39mnan, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mB\u001b[39m\u001b[39m'\u001b[39m: [np\u001b[39m.\u001b[39mnan, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, np\u001b[39m.\u001b[39mnan, \u001b[39m5\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m: [\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yuqing/Desktop/MiningBigData/workshop%20mbd/workshop2/Workshop%20week%204%20Classification%20and%20Feature%20Selection.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m }\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fancyimpute'"
+      "Original DataFrame:\n",
+      "     A    B  C\n",
+      "0  1.0  NaN  1\n",
+      "1  2.0  2.0  2\n",
+      "2  NaN  3.0  3\n",
+      "3  4.0  NaN  4\n",
+      "4  5.0  5.0  5\n",
+      "\n",
+      "Imputed DataFrame:\n",
+      "     A         B    C\n",
+      "0  1.0  1.000001  1.0\n",
+      "1  2.0  2.000000  2.0\n",
+      "2  3.0  3.000000  3.0\n",
+      "3  4.0  4.000000  4.0\n",
+      "4  5.0  5.000000  5.0\n"
      ]
     }
    ],
