--- a/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
+++ b/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,11 +282,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision :  70.21\n",
+      "Accuracy :  72.07\n",
+      "Recall :  47.83\n",
+      "F1 score :  56.9\n",
+      "AUC :  67.55\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yuqing/Library/Python/3.9/lib/python/site-packages/sklearn/svm/_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Users/yuqing/Library/Python/3.9/lib/python/site-packages/sklearn/svm/_base.py:1237: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "df_train = pd.read_csv('train.csv')\n",
     "df_train = df_train.drop(columns=['Name', 'Ticket', 'Cabin', 'Embarked'])\n",
     "df_test = pd.read_csv('test.csv')\n",
@@ -300,7 +324,8 @@
     "# Apply MICE for imputation but without target column\n",
     "# <your code here based on the above code for imputation>\n",
     "\n",
-    "imputed_X = <your code>\n",
+    "imputer = SimpleImputer(strategy='mean')\n",
+    "imputed_X = imputer.fit_transform(X)\n",
     "\n",
     "# Taking the labels (Survived or Not Survived)\n",
     "Y = df_train['Survived']\n",
@@ -333,12 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision :  82.93\n",
+      "Accuracy :  76.54\n",
+      "Recall :  49.28\n",
+      "F1 score :  61.82\n",
+      "AUC :  71.46\n"
+     ]
+    }
+   ],
    "source": [
     "# Declaring the SVC with no tunning\n",
-    "classifier = SVC(C=1)\n",
+    "classifier = SVC(C=20)\n",
     "\n",
     "# Fitting the data. This is where the SVM will learn\n",
     "classifier.fit(X_train, Y_train)\n",
@@ -360,6 +397,7 @@
     "#### Task 2: Modify the C value to find if the model improves or not and answer the following questions\n",
     "\n",
     "1. Does the model improve when C is much smaller or much larger? Or it does not make any difference?\n",
+    "larger\n",
     "2. Based on your knowledge from the lecture, is this data mostly linearly separable or mostly not? Why?\n",
     "3. For the best results, does the margin become larger or smaller?\n"
    ]
@@ -375,9 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score:  0.7196299514188866\n"
+     ]
+    }
+   ],
    "source": [
     "#Train kNN\n",
     "from sklearn.neighbors import NearestNeighbors\n",
@@ -405,9 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision :  80.3\n",
+      "Accuracy :  81.01\n",
+      "Recall :  71.62\n",
+      "F1 score :  75.71\n",
+      "AUC :  79.62\n"
+     ]
+    }
+   ],
    "source": [
     "#Train logistic regression\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -415,6 +473,14 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
     "### your code here ###\n",
+    "## using mean to impute the missing values\n",
+    "imputer = SimpleImputer(strategy='mean')\n",
+    "X_imputed = imputer.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_imputed, Y, test_size=0.2, random_state=42)\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
     "#Evaluate model\n",
     "print('Precision : ', np.round(metrics.precision_score(y_test, y_pred)*100,2))\n",
