--- a/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
+++ b/workshop mbd/workshop2/Workshop week 4 Classification and Feature Selection.ipynb
@@ -323,7 +323,6 @@
     "\n",
     "# Apply MICE for imputation but without target column\n",
     "# <your code here based on the above code for imputation>\n",
-    "\n",
     "imputer = SimpleImputer(strategy='mean')\n",
     "imputed_X = imputer.fit_transform(X)\n",
     "\n",
@@ -514,15 +513,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision :  72.22\n",
+      "Accuracy :  79.33\n",
+      "Recall :  75.36\n",
+      "F1 score :  73.76\n",
+      "AUC :  78.59\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn import metrics\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
+    "# Load the dataset\n",
+    "df_train = pd.read_csv('train.csv')\n",
+    "df_train = df_train.drop(columns=['Name', 'Ticket', 'Cabin', 'Embarked'])\n",
     "\n",
-    "#### your code here ####\n",
+    "# Convert categorical variables to numerical\n",
+    "df_train['Sex'] = df_train['Sex'].map({'male': 0, 'female': 1}).astype(int)\n",
     "\n",
+    "# Handle missing values using SimpleImputer\n",
+    "imputer = SimpleImputer(strategy='mean')\n",
+    "df_train[['Age']] = imputer.fit_transform(df_train[['Age']])\n",
+    "\n",
+    "# Split the dataset into features and target variable\n",
+    "X = df_train[['Sex', 'Age', 'Pclass', 'SibSp', 'Parch', 'Fare']]\n",
+    "y = df_train['Survived']\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "# Create and train the Naive Bayes classifier\n",
+    "naive_bayes_classifier = GaussianNB()\n",
+    "naive_bayes_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = naive_bayes_classifier.predict(X_test)\n",
     "#Evaluate model\n",
     "print('Precision : ', np.round(metrics.precision_score(y_test, y_pred)*100,2))\n",
     "print('Accuracy : ', np.round(metrics.accuracy_score(y_test, y_pred)*100,2))\n",
@@ -564,9 +601,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(712, 6)\n",
+      "6/6 [==============================] - 0s 500us/step\n",
+      "6/6 [==============================] - 0s 494us/step\n",
+      "Precision :  77.27\n",
+      "Accuracy :  81.56\n",
+      "Recall :  73.91\n",
+      "F1 score :  75.56\n",
+      "AUC :  80.14\n"
+     ]
+    }
+   ],
    "source": [
     "# source: https://www.kaggle.com/code/theblackmamba31/titanic-tutorial-neural-network\n",
     "import tensorflow as tf\n",
@@ -592,7 +651,7 @@
     "model.add(Dense(units =1 , activation = 'sigmoid'))\n",
     "\n",
     "model.compile(loss = tf.keras.losses.binary_crossentropy, optimizer = tf.keras.optimizers.Adam(), metrics = ['acc'])\n",
-    "model.fit(X_train, Y_train, batch_size = 32, verbose = 0, epochs = 50)\n",
+    "model.fit(X_train, Y_train, batch_size = 32, verbose = 0, epochs = 50, validation_split=0.2 )\n",
     "\n",
     "predict = model.predict(x_test)\n",
     "#since we have use sigmoid activation function in output layer\n",
