--- a/assignment1/a1841612_yuqingchen_assign1a.ipynb
+++ b/assignment1/a1841612_yuqingchen_assign1a.ipynb
@@ -709,7 +709,7 @@
    "id": "4b339939",
    "metadata": {},
    "source": [
-    "As we can see, we don't have any missing value on the dataset"
+    "As we can see, we don't have any missing value on the dataset\n"
    ]
   },
   {
