--- a/assignment2/a1841612_yuqingchen_assign1b.ipynb
+++ b/assignment2/a1841612_yuqingchen_assign1b.ipynb
@@ -74,6 +74,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2dd6ca8",
+   "metadata": {},
+   "source": [
+    "Because the data type is object, but we need to convert it to a datetime type, making it easier to subsequently index by datetime.\n",
+    "\n",
+    "The next step we need to take is to see if there is any missing value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "c11ecaeb",
@@ -99,7 +109,8 @@
    "id": "dbf84c2d",
    "metadata": {},
    "source": [
-    "As we can see the result, there is no value missing in the dataset. So we don't need to do anything with it"
+    "As we can see the result, there is no value missing in the dataset. So we don't need to do anything with it.\n",
+    "So we directly convert date to a datetime datatype."
    ]
   },
   {
@@ -111,6 +122,14 @@
    "source": [
     "df['date'] = pd.to_datetime(df['date'],format='%d/%m/%Y %H:%M')\n",
     "df.set_index('date', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c70c83b",
+   "metadata": {},
+   "source": [
+    "See if date is used as an index"
    ]
   },
   {
@@ -181,6 +200,14 @@
    ],
    "source": [
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f15cf030",
+   "metadata": {},
+   "source": [
+    "We can see that the date value was successfully converted to a datetime datatype and used as an index."
    ]
   },
   {
@@ -1710,15 +1737,15 @@
    "id": "b7f8ff17",
    "metadata": {},
    "source": [
-    "[1] Atique, S, Noureen, S, Roy, V, Subburaj, V, Bayne, S & Macfie, J 2019, ‘Forecasting of total daily solar energy generation using ARIMA: A case study’, *IEEE*, pp. 0114-0119.\n",
+    "[1] Al-Qazzaz, R & Yousif, S, 2022, ‘High performance time series models using auto autoregressive integrated moving average’ n.d., *Indonesian Journal of Electrical Engineering and Computer Science*, vol.27, no.1, pp. 422-430. \n",
     "\n",
-    "[2] Mpawenimana, I, Pegatoquet, A, Roy, V, Rodriguez, L & Belleudy, C 2020, ‘Comparative study of LSTM and ARIMA for energy load prediction with enhanced data preprocessing’, *2020 IEEE Sensors Applications Symposium (SAS)*, pp. 1-6, DOI: 10.1109/SAS48726.2020.9220021.\n",
+    "[2] Atique, S, Noureen, S, Roy, V, Subburaj, V, Bayne, S & Macfie, J 2019, ‘Forecasting of total daily solar energy generation using ARIMA: A case study’, *IEEE*, pp. 0114-0119.\n",
     "\n",
-    "[3] Al-Qazzaz, R & Yousif, S, 2022, ‘High performance time series models using auto autoregressive integrated moving average’ n.d., *Indonesian Journal of Electrical Engineering and Computer Science*, vol.27, no.1, pp. 422-430. \n",
+    "[3] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, *Materials*, vol. 15, no. 4, pp. 1477-1498.\n",
     "\n",
     "[4] Mondal, P, Shit, L & Goswami, S 2014, ‘Study of Effectiveness of Time Series Modeling (Arima) in Forecasting Stock Prices’, *International Journal of Computer Science, Engineering and Applications*, vol. 4, no. 2, pp. 13–29.\n",
     "\n",
-    "[5] Lyu, Z, Yu, Y, Samali, B, Rashidi, M, Mohammadi, M, Nguyen, TN & Nguyen, A 2022, ‘Back-Propagation Neural Network Optimized by K-Fold Cross-Validation for Prediction of Torsional Strength of Reinforced Concrete Beam’, *Materials*, vol. 15, no. 4, pp. 1477-1498."
+    "[5] Mpawenimana, I, Pegatoquet, A, Roy, V, Rodriguez, L & Belleudy, C 2020, ‘Comparative study of LSTM and ARIMA for energy load prediction with enhanced data preprocessing’, *2020 IEEE Sensors Applications Symposium (SAS)*, pp. 1-6, DOI: 10.1109/SAS48726.2020.9220021."
    ]
   }
  ],
